// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with login prop 1`] = `
<div
  className="sc-kGXeez cJrWPa"
/>
`;

exports[`renders correctly with no props 1`] = `
<div
  className="sc-kGXeez gtFUSy"
/>
`;
